--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sistemas de amortização</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
 <body>
@@ -25,8 +26,8 @@
                 <option value="sac" selected>SAC</option>
                 <option value="price">PRICE</option>
             </select>
-            
-            <button id="btnCalcula">Calcula</button>
+
+            <button id="btnCalcula" class="btn btn-primary">Calcula</button>
         </div>
         <div id="resultado">
             <table class="table table-striped">
@@ -40,13 +41,7 @@
                     </tr>
                 </thead>
                 <tbody id="corpo-tabela">
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>1200</td>
-                        <td>200</td>
-                        <td>1000</td>
-                        <td>11000</td>
-                    </tr>
+
                 </tbody>
             </table>
         </div>
